syntax = 'proto3';

package MatlabPython;
enum Type {
  FLOAT64 = 0;
  INT32 = 1;
  UINT8 = 2;
}

message Numpy {
  int32 num_dims = 1;
  repeated int32 dims = 2;
  Type type = 3;
  bytes data = 4;
}